--- a/example/index.html
+++ b/example/index.html
@@ -125,6 +125,76 @@
         </div>
     </div>
 
+    <div class="row">
+        <div class="col-xs-12">
+            <p>
+                <br>Sources must not be defined for all beakpoints. If there's just a source for one breakpoint the image will only be visible in the specific breakpoint. It works with bolth calculation of width based on container and viewport.<br>
+
+                The follwoing images are only visible in the defined breakpoint.
+            </p>
+            <p>This code is used for the both images on the left side. Only the <strong>data-container</strong> attribute is set for the two last images.</p>
+            <pre class="small">
+&lt;span class=&quot;picture&quot; data-alt=&quot;foo&quot; data-title=&quot;bar&quot; data-class=&quot;img-responsive&quot;&gt;
+    &lt;span data-src=&quot;http://dummyimage.com/1000x500/2849ad/ffffff&text=1000+x+500+@1x&quot; data-min-width=&quot;800&quot;&gt;&lt;/span&gt;
+&lt;/span&gt;</pre>
+            <p>This code is used for the both images on the right side. Only the <strong>data-container</strong> attribute is set for the two last images.</p>
+            <pre class="small">
+&lt;span class=&quot;picture&quot; data-alt=&quot;foo&quot; data-title=&quot;bar&quot; data-class=&quot;img-responsive&quot;&gt;
+    &lt;span data-src=&quot;http://dummyimage.com/1000x500/2849ad/ffffff&text=1000+x+500+@1x&quot; data-min-width=&quot;800&quot;&gt;&lt;/span&gt;
+&lt;/span&gt;</pre>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-xs-12">
+            <p><br>The first two images are based on the windows viewport. The left image ist only visible in viewport greater than 800px. The right image is only visible in viewport smaller than 800px.</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-6">
+            <h4>Src only set for a specific breakpoint based on viewport, eg. viewport &gt;= 800px</h4>
+            <figure>
+                <span class="picture" data-alt="foo" data-title="bar" data-class="img-responsive">
+                    <span data-src="http://dummyimage.com/1000x500/2849ad/ffffff&text=1000+x+500+@1x" data-min-width="800"></span>
+                </span>
+            </figure>
+        </div>
+
+        <div class="col-xs-6">
+            <h4>Src only set for a specific breakpoint based on viewport, eg. viewport &gt; 800px</h4>
+            <figure>
+                <span class="picture" data-alt="foo" data-title="bar" data-class="img-responsive">
+                    <span data-src="http://dummyimage.com/800x400/2849ad/ffffff&text=800+x+400+@1x" data-max-width="799"></span>
+                </span>
+            </figure>
+        </div>
+    </div>
+    
+    <div class="row">
+        <div class="col-xs-12">
+            <p><br>The next two images are based on its surrounding &lt;figure&gt; tag. The left image is only visible if the container width is &gt;= 400px. The right image is only visible if the container width is &lt; 400px.</p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-xs-6">
+            <h4>Source only set for a specific breakpoint based on container, eg. container &gt;= 400px</h4>
+            <figure>
+                <span class="picture" data-container="figure" data-alt="foo" data-title="bar" data-class="img-responsive">
+                    <span data-src="http://dummyimage.com/800x400/2849ad/ffffff&text=800+x+400+@1x" data-min-width="400"></span>
+                </span>
+            </figure>
+        </div>
+
+        <div class="col-xs-6">
+            <h4>Source only set for a specific breakpoint based on container, eg. container &lt; 400px</h4>
+            <figure>
+                <span class="picture" data-container="figure" data-alt="foo" data-title="bar" data-class="img-responsive">
+                    <span data-src="http://dummyimage.com/400x200/2849ad/ffffff&text=400+x+200+@1x" data-max-width="399"></span>
+                </span>
+            </figure>
+        </div>
+    </div>
 </div>
 <!-- /container -->
 
